Bug 105083 - Impress: The numbered/bulleted list toggle button and menu items aren't highlighted when a numbered/bullet list is active
Summary: Impress: The numbered/bulleted list toggle button and menu items aren't highl...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.1 inRelease...
Keywords:
: 127541 127656 163529 (view as bug list)
Depends on:
Blocks: Bullets-Numbering-Dialog Sidebar-Properties
  Show dependency treegraph
 
Reported: 2017-01-03 23:06 UTC by Telesto
Modified: 2025-02-09 16:21 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-01-03 23:06:40 UTC
Description:
The toggle bullet list button (same for numbering) isn't highlighted as active in the properties deck (or formatting toolbar) while using a bullet list (in the same way Writer does). 


Steps to Reproduce:
1.Open Impress
2.Select a template: Click cancel
3.Activate sidebar & properties deck
3.Add a sheet
4.Click on the canvas "Click to add Text" and add some text
5.Check if Toggled bulleted list is enabled in the deck


5

Actual Results:  
The toggle bulleted list isn't marked active (highlighted) when using a bulleted list (or numbering list)

Expected Results:
The toggle bulleted list and numbering list should be highlighted (the same way as in Writer)



Reproducible: Always

User Profile Reset: No

Additional Info:
Found in
Version: 5.4.0.0.alpha0+
Build ID: 215cbfb460326010737433c2020638e9388a88a4
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-01-02_23:58:32
Locale: nl-NL (nl_NL); Calc: CL

and in
Versie: 4.4.6.3 
Build ID: e8938fd3328e95dcf59dd64e7facd2c7d67c704d
Locale: nl_NL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:45.0) Gecko/20100101 Firefox/45.0
Comment 1 Buovjaga 2017-01-05 09:23:24 UTC
Repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 1a58cdf8af1aba52ce0a376666dd7d742234d7cf
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on January 4th 2016
Comment 2 QA Administrators 2018-01-06 03:31:24 UTC Comment hidden (obsolete)
Comment 3 Telesto 2018-01-06 16:07:00 UTC
Repro with
Version: 6.1.0.0.alpha0+
Build ID: a9b202a6b7000e7af34f2a639ca207122a3968bf
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-12-26_23:10:23
Locale: nl-NL (nl_NL); Calc: CL

and with
Versie: 4.2.0.4 
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Comment 4 Timur 2019-12-02 14:07:54 UTC
*** Bug 127541 has been marked as a duplicate of this bug. ***
Comment 5 sdc.blanco 2021-02-23 04:30:51 UTC
Repro.

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 7752bbe121fa0cd892ffc6ddaf465f519573dc09
CPU threads: 8; OS: Windows 10.0 Build 19041; UI render: Skia/Raster; VCL: win
Locale: en-US (en_DK); UI: en-US
Calc: threaded
Comment 6 QA Administrators 2023-05-07 03:16:33 UTC Comment hidden (obsolete)
Comment 7 Buovjaga 2024-07-18 12:10:11 UTC
This is also true for the menu Format - Lists. Linux gtk and kf UIs show unchecked checkboxes for both ordered and unordered lists in the menu. Windows and gen UIs don't show any checkboxes.
Comment 8 Eyal Rozenberg 2024-10-19 15:39:52 UTC
*** Bug 163529 has been marked as a duplicate of this bug. ***
Comment 9 Commit Notification 2025-01-21 12:21:32 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5337205fdc3917760008dac77f1d0f5c4d55fef7

tdf#105083 Support status of numbering and bullet list

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-01-24 05:52:58 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/1757f5bf108cdee51eecd67a40fde187281fa7c6

tdf#105083 Support status of numbering and bullet list

It will be available in 25.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Gabor Kelemen (Collabora) 2025-01-24 21:46:24 UTC
*** Bug 127656 has been marked as a duplicate of this bug. ***