tdf#105083 Support status of numbering and bullet list

Shows the status of bullet/numbering in the current text selection
in the toolbar buttons ToggleUnorder/OrderedList.

Change-Id: I458896293c502da8142ad9cb43b5ea62a9f3b558
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180259
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: allotropia jenkins <jenkins@allotropia.de>